# master-mind

./: CMakeLists.txt  README.md  main.cpp
src/: 3state_check.cpp  3state_check.h  board_4x6.cpp  board_4x6.h  cheats_ifaca.h  cheats_iface.cpp  serializer_iface.h
tests/: test_3state_check.cpp  test_board_4x6.cpp  test_board_manager.cpp
